@@ -16,23 +16,23 @@
 
 package dagger.internal.codegen.writing;
 
-import static com.google.common.base.Preconditions.checkState;
 import static com.squareup.javapoet.MethodSpec.methodBuilder;
 import static dagger.internal.codegen.binding.AssistedInjectionAnnotations.assistedParameterSpecs;
 import static dagger.internal.codegen.writing.ComponentImplementation.MethodSpecKind.PRIVATE_METHOD;
 import static javax.lang.model.element.Modifier.PRIVATE;
 
-import com.google.common.collect.ImmutableList;
 import com.squareup.javapoet.TypeName;
 import dagger.assisted.Assisted;
 import dagger.assisted.AssistedFactory;
 import dagger.assisted.AssistedInject;
+import dagger.internal.codegen.base.Preconditions;
 import dagger.internal.codegen.binding.BindingRequest;
 import dagger.internal.codegen.binding.ContributionBinding;
 import dagger.internal.codegen.compileroption.CompilerOptions;
 import dagger.internal.codegen.langmodel.DaggerTypes;
 import dagger.internal.codegen.writing.ComponentImplementation.ShardImplementation;
 import dagger.model.BindingKind;
+import java.util.List;
 
 /**
  * A binding expression that wraps the dependency expressions in a private, no-arg method.
@@ -85,7 +85,7 @@ final class PrivateMethodBindingExpression extends MethodBindingExpression {
                   // Private methods for assisted injection take assisted parameters as input.
                   binding.kind() == BindingKind.ASSISTED_INJECTION
                       ? assistedParameterSpecs(binding, types)
-                      : ImmutableList.of())
+                      : List.of())
               .returns(TypeName.get(returnType()))
               .addCode(methodBody())
               .build());
@@ -94,12 +94,12 @@ final class PrivateMethodBindingExpression extends MethodBindingExpression {
 
   @Override
   protected String methodName() {
-    checkState(methodName != null, "addMethod() must be called before methodName()");
+    Preconditions.checkState(methodName != null, "addMethod() must be called before methodName()");
     return methodName;
   }
 
   @AssistedFactory
-  static interface Factory {
+  interface Factory {
     PrivateMethodBindingExpression create(
         BindingRequest request,
         ContributionBinding binding,
